@@ -19,6 +19,7 @@
 
 #include <ql/Pricers/mceverest.hpp>
 #include <ql/Processes/blackscholesprocess.hpp>
+#include <ql/Processes/stochasticprocessarray.hpp>
 
 namespace QuantLib {
 
@@ -79,6 +80,8 @@ namespace QuantLib {
                                                             dividendYield[i],
                                                             riskFreeRate,
                                                             volatilities[i]));
+        boost::shared_ptr<GenericStochasticProcess> process(
+                           new StochasticProcessArray(processes,correlation));
 
         TimeGrid grid(residualTime, 1);
         PseudoRandom::rsg_type rsg =
@@ -87,8 +90,8 @@ namespace QuantLib {
         bool brownianBridge = false;
 
         typedef MultiAsset<PseudoRandom>::path_generator_type generator;
-        boost::shared_ptr<generator> pathGenerator(new
-            generator(processes, correlation, grid, rsg, brownianBridge));
+        boost::shared_ptr<generator> pathGenerator(
+                           new generator(process, grid, rsg, brownianBridge));
 
         // initialize the path pricer
         DiscountFactor discount = riskFreeRate->discount(residualTime);
